# OTHELLO-

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Header.h  Node.cpp  Node.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  README.md  Tree.cpp  Tree.h  main.cpp
cmake_modules/: FindSFML.cmake
